--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ colorama>=0.4.6
 xmltodict>=0.13.0
 click-plugins>=1.1.1
 XlsxWriter>=3.0.0
-numpy<2.0.0
+numpy==1.24.3
+faiss-cpu==1.7.4
 huggingface_hub>=0.21.0
 joblib>=1.3.0
 transformers>=4.36.0,<4.52.0
@@ -30,7 +31,6 @@ semgrep>=1.30.0
 
 # Machine learning & embedding
 sentence-transformers>=2.2.0
-faiss-cpu==1.7.4
 openai>=1.0.0
 chromadb>=0.4.0
 tiktoken>=0.5.0
@@ -46,9 +46,9 @@ networkx>=2.8.0
 graphviz>=0.20.0 
 
 # For large models with extended context (100K tokens)
-llama-cpp-python-cuda>=0.2.0     # GPU-accelerated LLM inference
+# Note: Install llama-cpp-python with CUDA support using:
+# CMAKE_ARGS="-DLLAMA_CUBLAS=on" pip install llama-cpp-python
 psutil>=5.9.0                    # Memory monitoring
-flash-attn>=2.3.0                # Optional: Faster attention mechanism for large contexts
 einops>=0.6.1                    # For tensor operations with large models
 
 # Optional dependencies
