--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,61 @@
-*.pyc
+# Virtual Environment
+venv/
+env/
+.env
+
+# Python artifacts
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Model files (they're large)
+models/
+*.gguf
+*.bin
+*.ggml
+*.pt
+
+# Output and temporary files
+output/
+temp_repo/
+*.index
+embeddings.index
+embeddings_mapping.json
+*.tmp
+
+# Environment and IDE files
+.vscode/
+.idea/
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test files
+.pytest_cache/
+.coverage
+htmlcov/
